force-app/main/default/objects/Product_Delivery_Summary__c/Product_Delivery_Summary__c.object-meta.xml
<CustomObject>
    <label>Product Delivery Summary</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Product Delivery Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Delivery Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>