force-app/main/default/objects/Product_Delivery_Summary__c/fields/Clicks__c.field-meta.xml
<CustomField>
    <fullName>Clicks__c</fullName>
    <label>Clicks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>