force-app/main/default/objects/Product_Delivery_Summary__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Related Contact object</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Product Delivery Summaries</relationshipLabel>
    <relationshipName>Product_Delivery_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>