force-app/main/default/objects/Product_Delivery_Summary__c/fields/Delivered_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivered_Date__c</fullName>
    <label>Delivered Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>