force-app/main/default/objects/Product_Delivery_Summary__c/fields/Detailed_Report_PDF__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Report_PDF__c</fullName>
    <label>Detailed Report PDF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>