force-app/main/default/objects/Product_Delivery_Summary__c/fields/Engagements__c.field-meta.xml
<CustomField>
    <fullName>Engagements__c</fullName>
    <label>Engagements</label>
    <length>255</length>
    <type>Text</type>
</CustomField>