force-app/main/default/objects/Product_Delivery_Summary__c/fields/Fulfillment__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Fulfillment</label>
    <referenceTo>Fulfillment__c</referenceTo>
    <relationshipLabel>Product Delivery Summaries</relationshipLabel>
    <relationshipName>Product_Delivery_Summaries</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>