force-app/main/default/objects/Product_Delivery_Summary__c/fields/Fulfillment_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Contact_ID__c</fullName>
    <description>Customer ID from fulfillment</description>
    <formula>Fulfillment__r.Customer_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Customer ID from fulfillment</inlineHelpText>
    <label>Fulfillment Contact ID</label>
    <type>Text</type>
</CustomField>