force-app/main/default/objects/Product_Delivery_Summary__c/fields/Fulfillment_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Owner_Name__c</fullName>
    <formula>Fulfillment__r.Fulfillment_Owner_Fullname__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fulfillment Owner Name</label>
    <type>Text</type>
</CustomField>