force-app/main/default/objects/Product_Delivery_Summary__c/fields/Fulfillment_Primary_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Primary_Recipient__c</fullName>
    <description>Full Name from Fulfillment</description>
    <formula>Fulfillment__r.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Full Name from Fulfillment</inlineHelpText>
    <label>Fulfillment Primary Recipient</label>
    <type>Text</type>
</CustomField>