force-app/main/default/objects/Product_Delivery_Summary__c/fields/Fulfillment_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Product_Name__c</fullName>
    <description>Product Name from Fulfillment</description>
    <formula>Fulfillment__r.Product_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Product Name from Fulfillment</inlineHelpText>
    <label>Fulfillment Product Name</label>
    <type>Text</type>
</CustomField>