force-app/main/default/objects/Product_Delivery_Summary__c/fields/Fulfillment_Subscription_Health__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Subscription_Health__c</fullName>
    <description>Subscription Health from Fulfillment</description>
    <formula>TEXT(Fulfillment__r.Product_Engagement_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Subscription Health from Fulfillment</inlineHelpText>
    <label>Fulfillment Subscription Health</label>
    <type>Text</type>
</CustomField>