force-app/main/default/objects/Product_Delivery_Summary__c/fields/Impressions__c.field-meta.xml
<CustomField>
    <fullName>Impressions__c</fullName>
    <label>Impressions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>