force-app/main/default/objects/Product_Delivery_Summary__c/fields/Most_View_Websites__c.field-meta.xml
<CustomField>
    <fullName>Most_View_Websites__c</fullName>
    <label>Most View Websites</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>