force-app/main/default/objects/Product_Delivery_Summary__c/fields/Opens__c.field-meta.xml
<CustomField>
    <fullName>Opens__c</fullName>
    <label>Opens</label>
    <length>255</length>
    <type>Text</type>
</CustomField>