force-app/main/default/objects/Product_Delivery_Summary__c/fields/Order_Fulfillment__c.field-meta.xml
<CustomField>
    <fullName>Order_Fulfillment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Fulfillment</label>
    <referenceTo>Order_Fulfillment__c</referenceTo>
    <relationshipLabel>Product Delivery Summaries</relationshipLabel>
    <relationshipName>Product_Delivery_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>