force-app/main/default/objects/Product_Delivery_Summary__c/fields/Product_Preview__c.field-meta.xml
<CustomField>
    <fullName>Product_Preview__c</fullName>
    <label>Product Preview</label>
    <length>255</length>
    <type>Text</type>
</CustomField>