force-app/main/default/objects/Product_Delivery_Summary__c/fields/Sent__c.field-meta.xml
<CustomField>
    <fullName>Sent__c</fullName>
    <label>Sent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>