force-app/main/default/objects/Product_Delivery_Summary__c/fields/Sent_PDS_Email_Alert__c.field-meta.xml
<CustomField>
    <fullName>Sent_PDS_Email_Alert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is checked when the PDS email alert is sent to the client.</description>
    <inlineHelpText>This field is checked when the PDS email alert is sent to the client.</inlineHelpText>
    <label>Sent PDS Email Alert</label>
    <type>Checkbox</type>
</CustomField>