force-app/main/default/objects/Product_Delivery_Summary__c/fields/Web_Username__c.field-meta.xml
<CustomField>
    <fullName>Web_Username__c</fullName>
    <formula>Fulfillment__r.Web_Username__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Web Username</label>
    <type>Text</type>
</CustomField>