force-app/main/default/objects/Product_Delivery_Summary__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Fulfillment__c</columns>
    <columns>NAME</columns>
    <columns>Headline__c</columns>
    <columns>Delivered_Date__c</columns>
    <columns>Impressions__c</columns>
    <columns>Clicks__c</columns>
    <columns>Published_Date__c</columns>
    <columns>Opens__c</columns>
    <columns>Product_Preview__c</columns>
    <filterScope>Everything</filterScope>
    <label>Cheryl solko</label>
</ListView>