force-app/main/default/objects/Product_Delivery_Summary__c/listViews/Digital_Ads.listView-meta.xml
<ListView>
    <fullName>Digital_Ads</fullName>
    <columns>NAME</columns>
    <columns>Fulfillment__c</columns>
    <columns>Fulfillment_Primary_Recipient__c</columns>
    <columns>Headline__c</columns>
    <columns>Status__c</columns>
    <columns>Impressions__c</columns>
    <columns>Clicks__c</columns>
    <columns>Sent__c</columns>
    <columns>Most_View_Websites__c</columns>
    <columns>Published_Date__c</columns>
    <columns>Product_Preview__c</columns>
    <columns>Delivered_Date__c</columns>
    <columns>Contact__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Headline__c</field>
        <operation>contains</operation>
        <value>Digital Ad</value>
    </filters>
    <label>Digital Ads</label>
    <sharedTo>
        <group>Fulfillment_Team</group>
    </sharedTo>
</ListView>