force-app/main/default/objects/Product_Delivery_Summary__c/listViews/ENewsletters.listView-meta.xml
<ListView>
    <fullName>ENewsletters</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Fulfillment__c</columns>
    <columns>Fulfillment_Primary_Recipient__c</columns>
    <columns>Headline__c</columns>
    <columns>Status__c</columns>
    <columns>Opens__c</columns>
    <columns>Sent__c</columns>
    <columns>Clicks__c</columns>
    <columns>Contact__c</columns>
    <columns>Published_Date__c</columns>
    <columns>Product_Preview__c</columns>
    <columns>Delivered_Date__c</columns>
    <columns>Detailed_Report_PDF__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Headline__c</field>
        <operation>contains</operation>
        <value>newsletter</value>
    </filters>
    <label>E-Newsletters</label>
    <sharedTo>
        <group>Becky_Truhler</group>
        <group>Fulfillment_Team</group>
        <group>Josh_Kimball</group>
    </sharedTo>
</ListView>